--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -6,8 +6,27 @@
     --sidebar-width: 280px;
 }
 
-body {
-    background-color: #f7faff !important;
+.appview-container {
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+}
+
+.stAppHeader, .stAppToolbar {
+    opacity: 0!important;
+    visibility: hidden;
+
+}
+
+div.stForm {
+    padding: 20px 24px;
+    border-radius: 12px;
+    background: rgba(255,255,255,0.92);
+    box-shadow:
+        rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px,
+        rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px,
+        rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-bottom: 18px;
 }
 
 /* ---------- HEADER ---------- */
